@@ -388,3 +388,159 @@ ul.MenuClass img
 }
 
 .DnnModule{z-index:100;position:relative;}
+
+
+/*OrangeBox CSS - jQuery lightbox*/
+#ob_overlay {
+	background-color:#333;
+	display:none;
+	height:100%;
+	left:0;
+	position:fixed;
+	top:0;
+	width:100%;
+	z-index:100;
+}
+#ob_container {
+	height:100%;
+	left:0;
+	position:absolute;
+	top:0;
+	width:100%;
+	z-index:101;
+}
+#ob_float {
+	float:left;
+	height:50%;
+	min-width:100%;
+}
+#ob_window {
+	clear:both;
+	cursor:default;
+	display:none;
+	position:relative;
+	z-index:102;
+	margin:0 auto;
+	padding:22px;
+}
+#ob_content {
+	background-color:#fff;
+	border:0 solid #fff;
+}
+#ob_caption {
+	color:#333;
+	background-color:#fff;
+	position:absolute;
+	bottom:15%;
+	font-size:small;
+	max-width:75%;
+}
+#ob_caption p {
+	padding:0;
+	margin:10px;
+	cursor:text;
+}
+#ob_window img {
+	display:block;
+}
+#ob_inline {
+	padding:20px;
+	overflow:auto;
+}
+#ob_load {
+	-moz-border-radius:5px;
+	background:url(http://s3.amazonaws.com/dnncdn/MultiFunction/ob/loading.gif) no-repeat center;
+	background-color:#fff;
+	border-radius:5px;
+	height:40px;
+	left:50%;
+	position:fixed;
+	top:50%;
+	width:40px;
+	z-index:103;
+	margin:-25px 0 0 -25px;
+	padding:5px;
+}
+#ob_error {
+	text-align:center;
+	width:250px;
+	padding:10px;
+}
+#ob_close {
+	background:url(http://s3.amazonaws.com/dnncdn/MultiFunction/ob/buttons.png);
+	cursor:pointer;
+	height:30px;
+	left:0;
+	position:absolute;
+	top:0;
+	width:30px;
+	z-index:1103;
+}
+#ob_title {
+	color:#fff;
+	left:auto;
+	position:absolute;
+	right:22px;
+	top:-2px;
+	z-index:1103;
+}
+#ob_title h3 {
+	margin:0;
+	padding:0;
+}
+#ob_left,#ob_right {
+	bottom:8px;
+	cursor:pointer;
+	height:100%;
+	position:absolute;
+	width:75px;
+	z-index:1102;
+}
+#ob_left { left:-53px; }
+#ob_right { right:-53px; }
+#ob_left-ico,#ob_right-ico {
+	cursor:pointer;
+	display:block;
+	height:30px;
+	margin-top:-9px;
+	position:absolute;
+	top:50%;
+	width:30px;
+	z-index:1102;
+}
+#ob_left-ico {
+	background:url(http://s3.amazonaws.com/dnncdn/MultiFunction/ob/buttons.png) center;
+	right:10px;
+}
+#ob_right-ico {
+	background:url(http://s3.amazonaws.com/dnncdn/MultiFunction/ob/buttons.png) right;
+	left:10px;
+}
+#ob_left:hover,#ob_right:hover { visibility:visible; }
+#ob_dots {
+	list-style:none;
+	text-align:center;
+	margin:0;
+	padding:0;
+	width:100%;
+}
+#ob_dots li {
+	height:8px;
+	list-style:none;
+	width:8px;
+	margin:3px;
+	-moz-border-radius:4px;
+	background-color:#666;
+	border-radius:4px;
+	cursor:pointer;
+	display: -moz-inline-stack;
+	display: inline-block;
+	zoom:1;
+	*display:inline;
+}
+#ob_dots .current { background-color:#CCC!important; }
+#ob_share {
+	position:absolute;
+	right:24px;
+	top:3px;
+}
